# Corporacion-Favorita-Grocery-Sales-Forecasting

./: .gitignore  README.md  pyproject.toml
configs/data/: active.yaml  schema.yaml
configs/features/: active.yaml  schema.yaml
configs/models/: active.yaml  schema.yaml
data/: holidays_events_part1.parquet  items_part1.parquet  oil.parquet  stores_part1.parquet  transactions_part1.parquet
notebooks/: 01_data_init.ipynb  02_eda_overview.ipynb  04_seasonality_analysis.ipynb  EDA.ipynb
src/: data_loader.py  ui_data_config.py
src/plots/: overview.py  seasonality.py
src/utils/: files.py
tests/: test_data_loader.py  test_data_loader_preprocess.py  test_data_loader_split_merge.py  test_features_config.py  test_files.py  test_overview.py  test_seasonality_plots.py  test_ui_data_config.py
