[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "favorita-benchmark-app"
version = "0.1.0"
description = "Streamlit-based time-series forecasting benchmark for Corporación Favorita with YAML-driven configs, parquet caching, and modular feature store."
readme = "README.md"
authors = [
  { name = "Kiko", email = "kiko@tuta.io" }
]
requires-python = ">=3.10"

# Core runtime deps
dependencies = [
  "streamlit==1.39.0",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "scikit-learn>=1.5.1",
  "xgboost>=2.1.1",
  "plotly>=5.23.0",
  "pyarrow>=17.0.0",
  "requests>=2.32.3",
  "gdown>=5.2.0",
  "statsmodels>=0.14.2",
  "PyYAML>=6.0.2"
]

[project.optional-dependencies]
# Dev-Tools (Format, Lint, Typing, Tests)
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "black>=24.8.0",
  "isort>=5.13.2",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "types-PyYAML>=6.0.12",
  "types-requests>=2.32.0.20240907",
  "ipykernel>=6.29.5"
]

# Optional Deep Learning
# Achtung: TensorFlow 2.16 support Python 3.9–3.12 better then 3.13.
dl = [
  "tensorflow>=2.16.1"
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100
float_to_top = true
known_first_party = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = [
  "E203",  # Black compatibility (whitespace before ':')
  "E501"   # handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
pretty = true
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

# Optional convenience: 'uv' / 'pip' Use extras as:
#   pip install .[dev]
#   pip install .[dl]
#
# Solo App use:
#   pip install .